[package]
name = "chainpack"
version = "0.1.0"
authors = ["Fanda Vacek <fanda.vacek@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
chrono = "0.4"
log = "0.4.14"
fern = { version = "0.6.0", features = ["colored"] }
env_logger = "0.8.3"
clap = "2.33.3"
colored = "1.9.3"

[[bin]]
name = "cp2cp"

