[package]
name = "chainpack"
version = "0.1.0"
authors = ["Fanda Vacek <fanda.vacek@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
chrono = "0.4"
clap = "2.33.3"
log = "0.4"

[[bin]]
name = "cp2cp"

