[package]
name = "chainpack"
version = "0.1.0"
authors = ["Fanda Vacek <fanda.vacek@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4"
chrono = "0.4"
log = "0.4"
structopt = "0.3"
flexi_logger = { version = "0.19", features = ["colors"] }

[[bin]]
name = "cp2cp"

